--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-    "dotnet.defaultSolution": "TaskCraft.sln"
+    "dotnet.defaultSolution": "TaskCraft.sln",
+    "liveServer.settings.port": 5501
 }
